--- a/Index.html
+++ b/Index.html
@@ -16,6 +16,6 @@
             <button type="button" id="button" class="btn btn-danger btn-lg" onclick ="changeButtonColor()">Click me!</button>
         </div>
       </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+        <script src="C:\Users\daniel.bercea\Wellcode proiecte personale\StopLightButton\script.js"></script>
   </body>
 </html> 
