--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
                 <button type="button" id="button" class="btn btn-danger btn-lg" onclick= "changeButtonColor()">Click me!</button>
               </div>
            </div>     
-        <script src="C:\Users\daniel.bercea\Wellcode proiecte personale\StopLightButton\script.js"> </script>
+        <script src="script.js"> </script>
       </div>
     </div>
   </body>
