--- a/Index.html
+++ b/Index.html
@@ -4,16 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    <title>StopLight/title>
-  </head>
-  <body>
-   <div class="container">
+    <title> StopLight</title>
+   </head>
+  <html>
+   <body>
+    <div class="container">
         <div class="card">
             <div class="card-header">StopLight</div>
             <div class="card-body">
             <h1 id="StopLight">Stop, steady, go!</h1>
               <div class="d-grid gap-2">
-                <button type="button" id="button" class="btn btn-danger btn-lg" onclick= "changeButtonColor()">Click me!</button>
+                <button type="button" id="button" class="btn btn-danger" onclick="changeColour()">Click me!</button>
               </div>
            </div>     
         <script src="script.js"> </script>
